Домашнее задание №4. Правки